--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <hr/>
     <div id="display-element"></div>
     <form>
-      <input id="user-input" type="text">
+      <input id="user-input" name="user-input" type="text">
       <!-- How do you get this input sent to the pigLatin() function? -->
-      <button onclick="pigLatin()">Translate</button>
-    </form>  
+      <button type="button" onclick="pigLatin()">Translate</button>
+    </form>
     <hr/>
   </body>
 </html>
